Use accept_handshake_disabled to disable "accept" button when applicable

--- a/src/sass/_bidTracker.scss
+++ b/src/sass/_bidTracker.scss
@@ -1158,6 +1158,7 @@ $register-hide-icon: 95%;
   }
   .left-side {
     flex: 0.65;
+    padding-right: 1em;
   }
   .link-button-wrapper {
     margin: auto;
