--- a/src/sass/_handshakeModal.scss
+++ b/src/sass/_handshakeModal.scss
@@ -264,6 +264,7 @@
   .react-time-picker__inputGroup {
     display: flex;
     align-items: center;
+    font-size: 17px;
     padding-left: 10px;
   }
 
@@ -296,5 +297,9 @@
     .react-time-picker__button {
       background-color: $bg-gray-dark-3;
     }
+  }
+
+  .react-time-picker__inputGroup__amPm[disabled] {
+    opacity: 1 !important;
   }
 }
