--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -34,6 +34,7 @@
 // react-day-picker
 @import '~react-day-picker/lib/style.css';
 
+// react-datepicker
 @import "~react-datepicker/dist/react-datepicker.css";
 
 // Global
