--- a/src/sass/_glossary.scss
+++ b/src/sass/_glossary.scss
@@ -33,7 +33,7 @@
 
   fieldset {
     color: $foreground-color;
-    padding: 0 $padding 0 $padding;
+    padding: 0 $padding;
   }
 
   .glossary {
