--- a/src/sass/_bidTracker.scss
+++ b/src/sass/_bidTracker.scss
@@ -269,8 +269,8 @@ $register-hide-icon: 95%;
   }
 }
 
-.bid-tracker-overlay-alert--register-another-client {
-  background: $bg-overlay-hs-another-client;
+.bid-tracker-overlay-alert--register-with-another-bidder {
+  background: $bg-overlay-register-with-another-bidder;
   width: 56%;
   margin-left: auto;
   position: absolute;
@@ -281,9 +281,9 @@ $register-hide-icon: 95%;
   }
 }
 
-.bid-tracker-overlay-alert--register-another-client::after {
+.bid-tracker-overlay-alert--register-with-another-bidder::after {
   border-bottom: 10px solid transparent;
-  border-left: 10px solid $bg-hs-another-client;;
+  border-left: 10px solid $bg-register-with-another-bidder;;
   border-top: 10px solid transparent;
   clear: both;
   content: '';
@@ -1082,7 +1082,7 @@ $register-hide-icon: 95%;
     }
   }
 
-  .bid-tracker-overlay-alert--register-another-client {
+  .bid-tracker-overlay-alert--register-with-another-bidder {
     margin-left: 0%;
   }
 
@@ -1101,7 +1101,7 @@ $register-hide-icon: 95%;
     display: none;
   }
 
-  .bid-tracker-overlay-alert--register-another-client::after {
+  .bid-tracker-overlay-alert--register-with-another-bidder::after {
     display: none;
   }
 
@@ -1338,7 +1338,7 @@ $register-hide-icon: 95%;
     border-right: 1px solid $color-white;
   }
 
-  .register-another-client-container {
+  .register-with-another-bidder-container {
     border-left: 1px solid $color-white;
   }
 
@@ -1514,7 +1514,7 @@ $register-hide-icon: 95%;
     margin-left: $register-hide-icon;
   }
 
-  .bid-tracker-overlay-alert--register-another-client {
+  .bid-tracker-overlay-alert--register-with-another-bidder {
     margin-left: 0%;
 
   .bid-tracker-overlay-alert-content-container {
@@ -1522,7 +1522,7 @@ $register-hide-icon: 95%;
     }
   }
 
-  .bid-tracker-overlay-alert--register-another-client::after {
+  .bid-tracker-overlay-alert--register-with-another-bidder::after {
     display: none;
   }
 }
@@ -1532,5 +1532,5 @@ $register-hide-icon: 95%;
 }
 
 .bid-tracker-register-with-another-bidder {
-  background: $bg-hs-another-client;
+  background: $bg-register-with-another-bidder;
 }
