--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -219,5 +219,5 @@ $angle-down-black: url('#{$asset-path}assets/img/angle-down-black.svg');
 // other variables
 //
 $button-box-shadow: 5px 10px 20px -4px $color-black-box-shadow;
-$bg-hs-another-client: #dbdbdb;
-$bg-overlay-hs-another-client: #636363;
+$bg-register-with-another-bidder: #dbdbdb;
+$bg-overlay-register-with-another-bidder: #636363;
