--- a/src/sass/_bidTracker.scss
+++ b/src/sass/_bidTracker.scss
@@ -511,9 +511,14 @@ $register-hide-icon: 95%;
   }
 
   .register-with-another-bidder-icon {
-    animation: none;
-    background: $color-green-dark-opacity50;
-    border-color: $color-green-dark-opacity50;
+    span:nth-of-type(1),
+    span:nth-of-type(2),
+    span:nth-of-type(3),
+    span:nth-of-type(4) {
+      animation: none;
+      background: $color-green-dark-opacity50;
+      border-color: $color-green-dark-opacity50;
+    }
   }
 
   .register-with-another-bidder-number-icon-is-current-no-action {
@@ -1525,6 +1530,13 @@ $register-hide-icon: 95%;
 
   .bid-tracker-overlay-alert--register-with-another-bidder::after {
     display: none;
+  }
+
+  .bid-tracker-overlay-alert--register-with-another-bidder:hover {
+    opacity: 50%;
+    .register-with-another-bidder-container {
+      display: none;
+    }
   }
 }
 
