--- a/src/sass/_handshakeStatus.scss
+++ b/src/sass/_handshakeStatus.scss
@@ -50,11 +50,9 @@
     .arrow-regular {
       border: none;
     }
-    .tooltip-title {
-      font-weight: bold;
-    }
     .status-tooltip-wrapper {
       display: flex;
+      padding-bottom: 10px;
       div {
         display: flex;
         flex-direction: column;
@@ -74,6 +72,14 @@
       .status-name {
         font-weight: 400;
         font-style: italic;
+      }
+    }
+    .hs-registered {
+      border-top: 1px solid $color-gray-light;
+      padding-top: 10px;
+      .title {
+        font-size: 16px;
+        font-weight: bold;
       }
     }
   }
