new ribbon added

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -109,6 +109,7 @@ $color-cornflower-blue: #DDE4EF;
 $color-blue-chill: #117C8D;
 $color-blue-mariner: #2E72B7;
 $color-purple: #4e499b;
+$color-purple-medium: #E4E3F2;
 $color-purple-light: #F2F2F8;
 
 $tm-dark-blue: $bg-blue-dark-1;
