--- a/src/sass/_ribbon.scss
+++ b/src/sass/_ribbon.scss
@@ -50,6 +50,10 @@ $ribbon-shadow-color: rgba(112, 112, 112, .5);
   background-color: $tertiary-success-lighter;
 }
 
+.ribbon-htf {
+  background-color: $color-purple-medium;
+}
+
 .ribbon-outer-container-cut-left {
   box-shadow: 3px 4px 4px -4px $ribbon-shadow-color;
   margin-bottom: 2px;
