css updated for smaller screens

--- a/src/sass/_condensedCard.scss
+++ b/src/sass/_condensedCard.scss
@@ -1,6 +1,6 @@
 $condensed-card-margin-bottom: 15px;
 $condensed-card-padding: 9px 20px 7px;
-$condensed-card-data-padding: 15px 20px 9px;
+$condensed-card-data-padding: 15px 27px 9px 20px;
 
 .condensed-card {
 
