--- a/src/sass/_condensedCard.scss
+++ b/src/sass/_condensedCard.scss
@@ -123,7 +123,7 @@ $condensed-card-data-padding: 15px 27px 9px 20px;
       top: -1px;
       z-index: $ribbon-condensed-card-z + 1;
 
-      .ribbon-cn, .ribbon-hds {
+      .ribbon-hds {
         .fa {
         margin-right: .2em;
         }
