--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -991,3 +991,16 @@ $results-container-width: 100% - $filter-container-width;
   position: relative;
   top: 1px;
 }
+
+.tutorial-button {
+  position: fixed;
+  bottom: 5px;
+  left: 10px;
+  color: $primary-blue;
+  font-size: 2em;
+
+  > span {
+    box-shadow: 0px 0px 92px 5px $primary-blue;
+    border-radius: 100%;
+  }
+}
