--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -1001,6 +1001,6 @@ $results-container-width: 100% - $filter-container-width;
 
   > span {
     border-radius: 100%;
-    box-shadow: 0px 0px 90px 5px $primary-blue;
+    box-shadow: 0 0 90px 5px $primary-blue;
   }
 }
