employee agenda search cards

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -21,3 +21,12 @@
     }
   }
 }
+
+.employee-agenda-search-button {
+  border: 1px solid blue;
+  padding: 1rem;
+
+  a {
+    text-decoration: none;
+  }
+}
