--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -226,7 +226,7 @@
     border: 1px solid $blue-primary;
     border-radius: 3px;
     color: $color-white;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     line-height: 37px;
     padding: 3px;
     text-align: center;
@@ -322,7 +322,10 @@
   .button-container {
     display: flex;
     justify-content: flex-end;
-    margin-top: 0;
+
+    .view-agenda-item-button {
+      padding: 12px;
+    }
 
     > span {
       margin-right: 10px;
