--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -49,7 +49,7 @@
   margin-bottom: 25px;
   margin-left: 15px;
   margin-right: 25px;
-  width: 330px;
+  width: 335px;
 
   a {
     display: inline-block;
@@ -88,12 +88,17 @@
     font-weight: 500;
   }
 
-  .employee-agenda-card-top {
+  .employee-agenda-card-inner {
     display: flex;
     flex: 5;
     flex-direction: column;
     justify-content: space-between;
     padding: 16px;
+  }
+
+  .employee-agenda-card-top {
+    position: relative;
+    z-index: $condensed-card-top-z;
   }
 
   .employee-agenda-card-top-bottom {
@@ -195,12 +200,13 @@
   display: flex;
 
   div:nth-of-type(1) { flex: 3; }
-    div:nth-of-type(2) { flex: 2; }
+  div:nth-of-type(2) { flex: 2; }
 
     .ribbon-container-condensed {
       position: absolute;
-      margin-left: 28rem;
-      top: 66px
+      right: -17px;
+      top: -17px;
+      z-index: 2;
     }
 }
 
