styling clean up

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -246,6 +246,10 @@
   }
 }
 
+.employee-agenda-row {
+  margin-top: 1rem;
+}
+
 .employee-agenda-stat-row {
   border: 1px solid $color-gray-light;
   border-left: 11px solid $primary-blue;
