--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -69,10 +69,6 @@
     margin-left: 5px;
   }
 
-  .author-name {
-    font-weight: 500;
-  }
-
   .employee-agenda-card-inner {
     padding: 16px;
     
@@ -102,7 +98,7 @@
     margin-bottom: 5px;
 
     .fa {
-      padding: 3px 6px 3px 0;
+      padding: 0 6px 6px 0;
     }
 
     .org-fa-arrow {
