updating row view box shadow

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -167,7 +167,7 @@
   .employee-agenda-stat-row {
     border: 1px solid $color-gray-light;
     border-left: 11px solid $primary-blue;
-    box-shadow: rgb(0 0 0 / 15%) 3px 2px;
+    box-shadow: rgb(0 0 0 / 15%) 3px 2px 10px 1px;
     margin-bottom: 1rem;
     padding: 15px 20px;
     width: 90%; // may need to change to align with export/sort row
