--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -83,7 +83,7 @@
       margin-bottom: 5px;
 
       .fa {
-        padding: 0 6px 6px 0;
+        padding: 2px 6px 6px 0;
       }
 
       .org-fa-arrow {
@@ -102,11 +102,6 @@
 
       .button-container {
         margin-top: 1.1rem;
-
-        a {
-          font-size: .9em;
-          padding: 10px 5px;
-        }
       }
     }
   }
@@ -127,15 +122,11 @@
     border: 1px solid $blue-primary;
     border-radius: 3px;
     color: $blue-primary;
-    padding: 3px;
+    margin: auto;
+    padding-bottom: 13px;
+    padding-top: 14px;
     text-align: center;
     width: 130px;
-
-    .view-agenda-item-text {
-      color: $blue-primary;
-      text-decoration: none;
-      width: 100%;
-    }
   }
 }
 
@@ -148,6 +139,7 @@
     color: $color-white;
     font-size: 1.5rem;
     line-height: 37px;
+    margin: auto;
     padding: 3px;
     text-align: center;
     width: 150px;
@@ -162,6 +154,7 @@
     border-left: 11px solid $primary-blue;
     box-shadow: rgb(0 0 0 / 15%) 3px 2px 10px 1px;
     margin-bottom: 1rem;
+    margin-left: 9.4rem;
     padding: 15px 20px;
     width: 90%; // may need to change to align with export/sort row
 
@@ -205,10 +198,6 @@
     .button-container {
       display: flex;
       float: right;
-
-      .view-agenda-item-button {
-        padding: 12px;
-      }
     }
 
     .employee-agenda-row-data-container {
