--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -164,9 +164,8 @@
     border-left: 11px solid $primary-blue;
     box-shadow: rgb(0 0 0 / 15%) 3px 2px 10px 1px;
     margin-bottom: 1rem;
-    margin-left: 9.4rem;
+    margin-left: 0;
     padding: 15px 20px;
-    width: 90%; // may need to change to align with export/sort row
 
     .initials-circle-container {
       margin-top: 8px;
@@ -176,8 +175,7 @@
         background: $primary-blue;
         border-radius: 50%;
         color: $color-white;
-        font-size: 50px;
-        font-weight: bold;
+        font-size: 37px;
         height: 90px;
         line-height: 90px;
         text-align: center;
