--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -85,7 +85,7 @@
       margin-bottom: 5px;
 
       .fa {
-        padding: 0 6px 0 0;
+        padding-right: 6px;
       }
 
       .org-fa-arrow {
@@ -224,7 +224,7 @@
           margin: 0 8rem .5rem 0;
 
           .fa {
-            padding: 0 6px 0 0;
+            padding-right: 6px;
           }
 
           .org-fa-arrow {
