media query for row view

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -172,6 +172,10 @@
       margin-top: 8px;
       position: absolute;
 
+      @media screen and (max-width: 1470px) {
+        padding-top: 2rem;
+      }
+
       .initials-circle {
         background: $primary-blue;
         border-radius: 50%;
