--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -1,69 +1,168 @@
-.agenda-controls-container {
-  align-items: baseline;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 15px;
-
-  .agenda-results-controls {
-    align-items: center;
+.empl-search-page {
+  .section {
+    background-color: $color-white;
+    border: 3px solid $tm-gray;
     display: flex;
-    justify-content: flex-end;
-    margin-top: 10px;
-    padding: 0 35px;
+    flex-direction: column;
+    margin-bottom: 1em;
+    min-height: 200px;
+    padding: 25px;
+    box-shadow: rgba(0, 0, 0, 0.15) 3px 2px 10px 1px;
+  }
 
-    div:first-child {
-      margin-right: 10px;
+  .padded-section {
+    padding: 25px;
+  }
+
+  .no-padding {
+    padding: 0;
+  }
+  .align-middle {
+    margin: auto;
+    text-align: center
+  }
+
+  .all-inline {
+    display: flex;
+    margin-bottom: 20px;
+  }
+
+  .mainSelector {
+    font-size: 2.5rem;
+    margin: 0 0 20px -30px;
+  }
+
+  .usa-width-one-sixth {
+    margin-bottom: 10px;
+  }
+
+  .empl-search-upper-section {
+    box-shadow: 20px 20px 20px $bg-gray-medium-2;
+    padding: 20px 35px;
+    background-color: $bg-blue-dark-1;
+  }
+
+  .filterby-container {
+    margin-top: 20px;
+    .filterby-label {
+      font-size: 20px;
+      margin-bottom: 10px;
+      float: left;
+      width: 115px;
     }
-
-    div {
-      align-items: baseline;
+    .filterby-clear {
+      font-weight: bold;
+      .fa-times {
+        color: $color-red;
+        margin-right: 5px;
+      }
+    }
+  }
+  .empl-search-filters {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(350px, 1fr));
+    .filter-div {
+      align-items: center;
+      margin-right: 10px;
       display: flex;
+      .label {
+        margin-right: 10px;
+        min-width: 115px;
+        text-align: end;
+      }
+      .picky {
+        color: $color-black;
+        width: 240px;
+      }
+    }
+    .split-filter-div {
+      .picky {
+        width: 120px;
+      }
+      .picky:nth-child(3) {
+        .picky__dropdown {
+          margin-left: -120px;
+        }
+      }
+      .picky__dropdown {
+        width: 240px;
+      }
+    }
+    .handshake-filter-div {
+      .label {
+        max-width: 115px;
+      }
+    }
+    input {
+      display: inline;
+    }
+    .react-daterange-picker {
+      background: $color-white;
+      align-items: center;
+      height: 28px;
+      width: 240px;
+      font-size: 1.5rem;
+
+      .react-daterange-picker__wrapper {
+        border: none;
+      }
+      .react-daterange-picker__inputGroup {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .react-daterange-picker__range-divider,
+      .react-daterange-picker__inputGroup__leadingZero,
+      .react-date-picker__inputGroup__divider {
+        color: $color-black;
+      }
     }
   }
 }
 
-.employee-search-filters-container {
-  input {
-    display: inline;
+.empl-search-lower-section {
+  padding: 0 35px 20px;
+}
+
+.empl-search-controls-container {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding-top: 15px;
+
+  div:first-child {
+    padding-left: 35px;
   }
-  background-color: $bg-blue-dark-1;
+}
 
-  .hello-greeting {
-    color: $color-white;
-  };
+.empl-search-results-controls {
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  padding: 0px 35px;
 
-  .homepage-search-legend {
-    color: $color-white;
+  div:first-child {
+    margin-right: 10px;
   }
 
-  .empl-filters {
+  div {
     display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-
-    .filter-div {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      width: 310px;
-
-      .label {
-        color: $color-white;
-        margin-right: 5px;
-      }
-    }
-
-    .picky {
-      width: 200px;
-    }
-
-    .split-filter-div {
-      .picky {
-        width: 100px;
-      }
-      .picky__dropdown {
-        width: 200px;
-      }
-    }
+    align-items: baseline;
   }
+}
+
+.empl-search-controls-right {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  padding-right: 35px;
+}
+
+.empl-search-page-size {
+  margin-left: 20px;
+}
+
+.empl-search-controls {
+  padding-left: 35px;
 }
