--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -489,6 +489,25 @@
           }
 
         }
+
+        .remarks-container {
+          margin: 25px;
+          
+          .remarks-text {
+            float: left;
+            font-size: 20px;
+            margin-right: .7rem;
+          }
+
+          .remarks-pill-container {
+              border-radius: 12px;
+              color: $color-white;
+              display: inline;
+              font-size: 0.8em;
+              margin-right: 1.5rem;
+              padding: 0.5em;
+            }
+        }
       }
 
     }
