code climate fixes

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -492,7 +492,7 @@
 
         .remarks-container {
           margin: 25px;
-          
+
           .remarks-text {
             float: left;
             font-size: 20px;
@@ -500,13 +500,13 @@
           }
 
           .remarks-pill-container {
-              border-radius: 12px;
-              color: $color-white;
-              display: inline;
-              font-size: 0.8em;
-              margin-right: 1.5rem;
-              padding: 0.5em;
-            }
+            border-radius: 12px;
+            color: $color-white;
+            display: inline;
+            font-size: .8em;
+            margin-right: 1.5rem;
+            padding: .5em;
+          }
         }
       }
 
