--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -139,7 +139,6 @@
   align-items: center;
   display: flex;
   justify-content: flex-end;
-  margin-top: 10px;
   padding: 0px 35px;
 
   div:first-child {
@@ -154,7 +153,7 @@
 
 .empl-search-controls-right {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: center;
   padding-right: 35px;
 }
