Fix styling and card/row view mismatch

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -126,7 +126,7 @@
 
 .empl-search-controls-container {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   padding-top: 15px;
 
