Fix pagination padding

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -137,6 +137,10 @@
   padding-left: 35px;
 }
 
+.empl-search-pagination-controls {
+  padding-left: 35px;
+}
+
 .empl-search-results-controls {
   align-items: center;
   display: flex;
