--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -496,8 +496,9 @@
 
           .remarks-text {
             float: left;
-            font-size: 20px;
+            font-size: 1.1em;
             margin-right: .7rem;
+            margin-top: 3px;
           }
 
           .remarks-pill-container {
