renaming styling class pr feedback

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -501,7 +501,7 @@
             margin-top: 3px;
           }
 
-          .remarks-pill-container {
+          .remarks-pill {
             border-radius: 12px;
             color: $color-white;
             display: inline;
