Fix loading states

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -253,6 +253,10 @@
     display: flex;
     flex-wrap: wrap;
 
+    .usa-alert {
+      width: 50%;
+    }
+
     .ai-history-card {
       background-color: $color-white;
       border-radius: 10px;
