--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -135,6 +135,11 @@
   justify-content: space-between;
   padding-left: 35px;
   padding-top: 15px;
+  .usa-alert-info {
+    left: 40%;
+    margin-top: -10px;
+    margin-bottom: 20px;
+  }
 }
 
 .empl-search-pagination-controls {
