Remove client profile link for AO

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -355,7 +355,7 @@
       line-height: 1.3em;
       margin: 8px 0 .3rem 15rem;
 
-      a {
+      a, .row-name {
         font-size: .9em;
         font-weight: bold;
         margin-left: 15px;
