--- a/src/sass/_administrator.scss
+++ b/src/sass/_administrator.scss
@@ -370,6 +370,14 @@
         padding: 15px 0 0;
         text-align: center;
       }
+
+      th:nth-of-type(5) {
+        .filter-row {
+          div {
+            min-width: 150px;
+          }
+        }
+      }
     }
 
     .filter-row {
