--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -28,26 +28,30 @@
     margin-left: 20px;
     width: 48%;
   }
-}
+  @media screen and (max-width: 1650px) {
+    .ai-maintenance-containers {
+      display: grid;
 
-@media screen and (max-width: 1650px) {
-  .ai-maintenance-containers {
-    display: grid;
+      .maintenance-container-left {
+        height: 500px;
+        width: 99%;
 
-    .maintenance-container-left {
-      height: 500px;
-      width: 99%;
+        .expand-arrow {
+          display: none;
+        }
+      }
 
-      .expand-arrow {
-        display: none;
+      .maintenance-container-right {
+        height: 500px;
+        margin-left: 0;
+        margin-top: 20px;
+        width: 99%
       }
     }
+  }
 
-    .maintenance-container-right {
-      height: 500px;
-      margin-left: 0;
-      margin-top: 20px;
-      width: 99%
-    }
+  .ai-research-pane {
+    background-color: $color-white;
+    padding: 20px;
   }
 }
