$bg-gray-medium-1 border

--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -80,7 +80,7 @@
   }
 
   .language-details > span {
-    border-left: 1px solid black;
+    border-left: 1px solid $bg-gray-medium-1;
     float: inherit;
     margin-left: 10px;
     padding-left: 10px;
