adding tooltip/icon and disabling step2

--- a/src/sass/_availableBidders.scss
+++ b/src/sass/_availableBidders.scss
@@ -176,6 +176,9 @@
         }
       }
     }
+    .no-step-letters-icon {
+      color: $color-gray-light;
+    }
   }
 }
 
@@ -321,7 +324,7 @@
   }
 }
 
-#ocReason:disabled, #ocBureau:disabled {
+#ocReason:disabled, #ocBureau:disabled, #stepLetterTwo:disabled {
   background: darkgrey;
 }
 
@@ -403,4 +406,48 @@
 
 .no-comments {
   color: $color-gray-light;
+}
+
+.tippy-popper {
+  .tippy-tooltip.step-letters-theme {
+    background-color: $color-white;
+    color: $color-black;
+    border: 2px solid $tm-gray;
+    font-size: 14px;
+    font-family: Roboto;
+    padding: 15px;
+    text-align: left;
+    box-shadow: $tm-gray 3px 14px 29px;
+    .arrow-regular {
+      border: none;
+    }
+    .step-letter-tooltip-wrapper {
+      display: flex;
+      padding-bottom: 10px;
+      div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      div:first-child {
+        padding-right: 10px;
+        border-right: 1px solid $color-gray-light;
+      }
+      div:nth-child(2) {
+        padding-left: 10px;
+      }
+      .title {
+        font-size: 16px;
+        font-weight: bold;
+      }
+      .step-letter-date {
+        font-weight: 400;
+        font-style: italic;
+      }
+    }
+    .title {
+      font-size: 16px;
+      font-weight: bold;
+    }
+  }
 }
