read-only step1 if step2 exist

--- a/src/sass/_availableBidders.scss
+++ b/src/sass/_availableBidders.scss
@@ -324,7 +324,7 @@
   }
 }
 
-#ocReason:disabled, #ocBureau:disabled, #stepLetterTwo:disabled {
+#ocReason:disabled, #ocBureau:disabled, #stepLetter:disabled {
   background: darkgrey;
 }
 
