--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -157,4 +157,86 @@
     }
   }
 
+  .ai-maintenance-pane {
+    .ai-maintenance-header {
+      background-color: $bg-gray-medium-4;
+
+      .usa-form {
+        max-width: 36rem;
+      }
+
+      .back-save-btns-container {
+        padding-top: 2.5rem;
+        min-height: 70px;
+
+        button {
+          margin: 0!important;
+        }
+
+        .save-ai-btn {
+          border: 1px solid $primary-blue;
+          border-radius: 5px;
+          color: $primary-blue;
+          background-color: $color-white;
+          display: inline-block;
+          padding: 10px 20px;
+          float: right;
+          font-size: 1.4rem;
+        }
+      }
+
+      .ai-maintenance-header-dd {
+        align-items: center;
+        margin-right: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        #ai-maintenance-dd-asg {
+          max-width: fit-content;
+          margin-left: -10px;
+        }
+
+        #add-pos-num-input {
+          background-color: $color-white;
+          border: 1px solid $bg-gray-dark-2;
+          border-radius: 3px;
+          height: 28px;
+          padding: 0 30px 0 5px;
+          max-width: 150px;
+          font-size: 13px;
+        }
+        #add-pos-num-icon {
+          color: $primary-blue;
+          border: 1px solid $primary-blue;
+          padding: 0 3px;
+          border-radius: 50%;
+          margin-left: -25px;
+        }
+
+        div:not(.remarks-container, .remarks-pill) {
+          display: flex;
+          flex: 70%;
+          align-items: baseline;
+        }
+
+        select {
+          border: 1px solid $bg-gray-dark-2;
+          border-radius: 3px;
+          font-size: 0.8em;
+          height: 28px;
+          padding: 0 23px 0 5px;
+          text-overflow: ellipsis;
+          max-width: 150px;
+        }
+
+        label {
+          font-weight: bold;
+          margin: 10px 10px;
+          text-align: end;
+        }
+      }
+
+    }
+  }
 }
