--- a/src/sass/_availableBidders.scss
+++ b/src/sass/_availableBidders.scss
@@ -324,7 +324,8 @@
   }
 }
 
-#ocReason:disabled, #ocBureau:disabled, #stepLetter:disabled {
+#ocReason:disabled, #ocBureau:disabled, 
+#stepLetterOne:disabled, #stepLetterTwo:disabled {
   background: darkgrey;
 }
 
