icon styling update when both step letters exist

--- a/src/sass/_availableBidders.scss
+++ b/src/sass/_availableBidders.scss
@@ -179,6 +179,9 @@
     .no-step-letters-icon {
       color: $color-gray-light;
     }
+    .both-step-letters-icon {
+      color: $color-red;
+    }
   }
 }
 
