--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -751,9 +751,7 @@
 
   #add-remark {
     color: #0071BC;
-    border: 1px solid #0071BC;
-    padding: 0 3px;
-    border-radius: 50%;
+    font-size: 20px;
     margin: 0 10px 0 -15px;
   }
 
